--- a/proje6/index.html
+++ b/proje6/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col">
                     <div class="ring">
-                        <img src="/img/img2.png" alt="">
+                        <img src="img/img2.png" alt="">
                         <span class="circle"></span>
                         <span class="circle2"></span>
                     </div>
